# devcontainers

./: README.md  pyproject.toml  settings.ini
.devcontainer/: Dockerfile  devcontainer.json
devcontainer_template/: _modidx.py
notebooks/: index.ipynb  nbdev.yml
