[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charles Vardeman", email = "cvardema@nd.edu"},
]
dependencies = [
    "nbdev>=2.3.12",
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "matplotlib>=3.6.3",
    "torch>=1.8.0",
    "torchtext>=0.9.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.2.1",
    "nbconvert>=7.2.9",
    "seaborn>=0.12.2",
    "plotly>=5.13.1"
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]